ntp: support configurable burn animation

--- a/special-pages/pages/new-tab/messages/types/protections-config.json
+++ b/special-pages/pages/new-tab/messages/types/protections-config.json
@@ -16,6 +16,10 @@
         "privacy-stats",
         "activity"
       ]
+    },
+    "showBurnAnimation": {
+      "description": "Boolean flag to explicitly enable or disable the burn animations",
+      "type": "boolean"
     }
   }
 }
