Add enableAi config to control Duck.ai visibility

--- a/special-pages/pages/new-tab/messages/types/omnibar-config.json
+++ b/special-pages/pages/new-tab/messages/types/omnibar-config.json
@@ -10,6 +10,11 @@
       "title": "Omnibar Mode",
       "type": "string",
       "enum": ["search", "ai"]
+    },
+    "enableAi": {
+      "title": "Enable Duck.ai",
+      "type": "boolean",
+      "default": true
     }
   }
 }
