--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lint-fix": "eslint . --fix && npx prettier . --write && npm run tsc",
     "stylelint": "npx stylelint \"**/*.css\"",
     "stylelint-fix": "npx stylelint \"**/*.css\" --fix",
-    "serve": "http-server -c-1 --port 3220 integration-test/test-pages",
-    "serve-special-pages": "http-server -c-1 --port 3221 build/integration/pages"
+    "serve": "npm run serve --workspace=injected",
+    "serve-special-pages": "npm run serve --workspace=special-pages"
   },
   "type": "module",
   "workspaces": [
