--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,9 +62,21 @@ jobs:
                   npm ci
                   npm run build
 
+            - name: Build XCFramework
+              run: |
+                  # Create xcframework build directory
+                  mkdir -p xcframework-build
+                  
+                  # The npm run build already creates everything in Sources/ContentScopeScripts/dist/
+                  # including contentScope.js, contentScopeIsolated.js, and pages/
+                  
+                  # Create the xcframework using the build script
+                  chmod +x scripts/build-xcframework.sh
+                  ./scripts/build-xcframework.sh ${{ github.event.inputs.version }}
+
             - name: Check in files
               run: |
-                  git add -f . ':!CHANGELOG.txt' ':!node_modules'
+                  git add -f . ':!CHANGELOG.txt' ':!node_modules' ':!xcframework-build'
 
             - name: Commit build files
               uses: stefanzweifel/git-auto-commit-action@v5
@@ -89,3 +101,5 @@ jobs:
                   prerelease: false
                   tag_name: ${{ github.event.inputs.version }}
                   target_commitish: 'releases'
+                  files: |
+                      xcframework-build/ContentScopeScripts.xcframework.zip
