--- a/injected/package.json
+++ b/injected/package.json
@@ -27,6 +27,7 @@
   },
   "type": "module",
   "dependencies": {
+    "minimist": "^1.2.8",
     "parse-address": "^1.1.2",
     "seedrandom": "^3.0.5",
     "sjcl": "^1.0.8",
