--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,7 @@
 * @duckduckgo/content-scope-scripts-owners
 
 # Documentation - anyone can edit
-injected/docs/ *
+injected/docs/
 
 # Feature owners
 injected/src/features/fingerprinting-* @duckduckgo/content-scope-scripts-owners @jonathanKingston @englehardt
