--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,8 @@ jobs:
             - name: Check in files
               run: |
                   git add -f . ':!CHANGELOG.txt' ':!node_modules' ':!apple-release-build'
+                  # Ensure the Apple release zip is included
+                  git add -f ContentScopeScripts-Apple-${{ github.event.inputs.version }}.zip
 
             - name: Commit build files
               uses: stefanzweifel/git-auto-commit-action@v5
