redo the workflows

--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -32,6 +32,12 @@ jobs:
             - name: Run build
               run: npm run build
 
+            - name: Build Apple Release
+              run: |
+                  # Create the Apple release using the build script
+                  ./scripts/build-apple-release.sh "pr-${{ github.event.pull_request.number }}"
+
+
             - name: Create and push release branch
               id: create_branch
               env:
@@ -42,6 +48,7 @@ jobs:
                   git config --global user.email "github-actions[bot]@users.noreply.github.com"
                   git checkout -b pr-releases/pr-${PR_NUMBER}
                   git add -f build
+                  git add -f ContentScopeScripts-apple.zip
                   git commit -m "Add build folder for PR ${PR_NUMBER}"
                   git push -u origin pr-releases/pr-${PR_NUMBER} --force
                   echo "BRANCH_NAME=pr-releases/pr-${PR_NUMBER}" >> $GITHUB_ENV
@@ -68,6 +75,8 @@ jobs:
                       const repoUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}`;
                       const branchUrl = `${repoUrl}/tree/${branchName}`;
                       const commitUrl = `${repoUrl}/commit/${commitHash}`;
+                      const zipFileName = `ContentScopeScripts-apple.zip`;
+                      const zipUrl = `${repoUrl}/blob/${branchName}/${zipFileName}`;
 
                       // Get the current date
                       const lastUpdatedDate = (new Date()).toLocaleString('en-US', {
@@ -83,6 +92,8 @@ jobs:
                         - **Branch Name**: [${branchName}](${branchUrl})
                         - **Commit Hash**: [${commitHash}](${commitUrl})
                         - **Last Updated**: ${lastUpdatedDate}
+                        - **Apple Release**: [${zipFileName}](${zipUrl})
+                          - Install command: \`./scripts/update_content_scope_scripts.sh ${commitHash}\`
                         - **Install Command**: \`npm i github:duckduckgo/content-scope-scripts#${commitHash}\`
 
                         Please use the above install command to update to the latest version.
