Apply a human touch to some things

--- a/special-pages/pages/new-tab/messages/types/omnibar-config.json
+++ b/special-pages/pages/new-tab/messages/types/omnibar-config.json
@@ -17,7 +17,7 @@
       "default": true
     },
     "showAiSetting": {
-      "title": "Show AI Setting Button",
+      "title": "Show Duck.ai Setting",
       "type": "boolean",
       "default": true
     }
