--- a/special-pages/pages/new-tab/messages/types/omnibar-config.json
+++ b/special-pages/pages/new-tab/messages/types/omnibar-config.json
@@ -15,6 +15,11 @@
       "title": "Enable Duck.ai",
       "type": "boolean",
       "default": true
+    },
+    "showAiSetting": {
+      "title": "Show Duck.ai Setting",
+      "type": "boolean",
+      "default": true
     }
   }
 }
