--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -21,10 +21,10 @@ injected/integration-test/mocks/broker-protection/ @duckduckgo/content-scope-scr
 injected/integration-test/test-pages/broker-protection/ @duckduckgo/content-scope-scripts-owners @duckduckgo/injected-broker-protection
 
 # Platform owners
-injected/src/features.js @duckduckgo/content-scope-scripts-owners @duckduckgo/apple-devs @duckduckgo/android-devs @duckduckgo/team-windows-development @kzar @sammacbeth
+injected/src/features.js @duckduckgo/content-scope-scripts-owners @duckduckgo/apple-devs @duckduckgo/android-devs @duckduckgo/team-windows-development @duckduckgo/extension-owners
 Sources/ @duckduckgo/content-scope-scripts-owners @duckduckgo/apple-devs
 injected/entry-points/android.js @duckduckgo/content-scope-scripts-owners @duckduckgo/android-devs
-injected/entry-points/extension-mv3.js @duckduckgo/content-scope-scripts-owners @kzar @sammacbeth
+injected/entry-points/extension-mv3.js @duckduckgo/content-scope-scripts-owners @duckduckgo/extension-owners
 injected/entry-points/windows.js @duckduckgo/content-scope-scripts-owners @duckduckgo/team-windows-development
 
 # Test owners
