Vibe code a slot-fill system and wire up the popoover

--- a/special-pages/pages/new-tab/messages/types/omnibar-config.json
+++ b/special-pages/pages/new-tab/messages/types/omnibar-config.json
@@ -20,6 +20,11 @@
       "title": "Show Duck.ai Setting",
       "type": "boolean",
       "default": true
+    },
+    "showCustomizePopover": {
+      "title": "Show Customize Popover",
+      "type": "boolean",
+      "default": false
     }
   }
 }
