Add Robert to CODEOWNERS entry for page-context.js

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,6 +11,7 @@ injected/src/features/click-to-load.js @duckduckgo/content-scope-scripts-owners 
 injected/src/features/click-to-load/ @duckduckgo/content-scope-scripts-owners @kzar @ladamski @franfaccin @jonathanKingston @shakyShane
 injected/src/locales/click-to-load/ @duckduckgo/content-scope-scripts-owners @kzar @ladamski @franfaccin @jonathanKingston @shakyShane
 injected/src/features/autofill-import.js @duckduckgo/content-scope-scripts-owners @dbajpeyi
+injected/src/features/page-context.js @duckduckgo/content-scope-scripts-owners @noisysocks
 
 # Broker protection
 injected/src/features/broker-protection.js @duckduckgo/content-scope-scripts-owners @duckduckgo/injected-broker-protection
