--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,12 @@
         "csstree/validator": {
             "ignoreProperties": ["text-wrap", "view-transition-name", "composes"]
         },
+        "property-no-unknown": [
+            true,
+            {
+                "ignoreProperties": ["composes"]
+            }
+        ],
         "alpha-value-notation": null,
         "at-rule-empty-line-before": null,
         "color-function-notation": null,
