--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ Sources/ContentScopeScripts/dist/
 test-results
 !Sources/ContentScopeScripts/dist/pages/.gitignore
 
+# Test output files (generated during tests)
+injected/unit-test/fixtures/page-context/output/
+
 # Local Netlify folder
 .netlify
 # VS Code user config
