--- a/injected/package.json
+++ b/injected/package.json
@@ -26,12 +26,12 @@
   },
   "type": "module",
   "dependencies": {
+    "@duckduckgo/privacy-configuration": "github:duckduckgo/privacy-configuration#1752154773643",
+    "esbuild": "^0.25.10",
     "minimist": "^1.2.8",
     "parse-address": "^1.1.2",
     "seedrandom": "^3.0.5",
     "sjcl": "^1.0.8",
-    "@duckduckgo/privacy-configuration": "github:duckduckgo/privacy-configuration#1752154773643",
-    "esbuild": "^0.25.10",
     "urlpattern-polyfill": "^10.1.0"
   },
   "devDependencies": {
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "fast-check": "^4.2.0",
     "jasmine": "^5.12.0",
+    "jsdom": "^27.0.0",
     "web-ext": "^9.0.0"
   }
 }
