--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -36,6 +36,7 @@ jobs:
               run: |
                   gh pr comment "$PR_URL" --body "@cursoragent can you review against the current code and outline potential impacts based on the changelogs of the update?
 
+                  Can you check the test coverage and ensure that the new code is covered?
                   Can you think through if this dependency is still needed or if there's better practices used elsewhere.
 
                   Can you draft a separate PR with any fixes that might be needed?"
