--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -28,6 +28,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@duckduckgo/design-tokens": "github:duckduckgo/design-tokens#v0.1.0",
     "@duckduckgo/messaging": "*",
     "chokidar": "^5.0.0",
     "fast-check": "^4.4.0",
