--- a/.github/workflows/dependabot-conflict-detector.yml
+++ b/.github/workflows/dependabot-conflict-detector.yml
@@ -14,6 +14,7 @@ jobs:
             - name: Check Dependabot PRs for conflicts
               uses: actions/github-script@v7
               with:
+                  github-token: ${{ secrets.DAX_PAT }}
                   script: |
                       const { data: pulls } = await github.rest.pulls.list({
                         owner: context.repo.owner,
