Move "NEW" label boolean property to protections_getConfig

--- a/special-pages/pages/new-tab/messages/types/protections-config.json
+++ b/special-pages/pages/new-tab/messages/types/protections-config.json
@@ -20,6 +20,10 @@
     "showBurnAnimation": {
       "description": "Boolean flag to explicitly enable or disable the burn animations",
       "type": "boolean"
+    },
+    "showProtectionsReportNewLabel": {
+      "description": "Display or hide the 'New' badge (label) on the protections report",
+      "type": "boolean"
     }
   }
 }
