--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
 command = "npm ci && npm run docs-netlify"
 publish = "docs"
 ignore = "git log -1 --pretty=%B | grep dependabot"
+
+# Prevent Netlify from auto-installing Swift
+[build.environment]
+SKIP_SWIFT_INSTALL = "true"
