--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,5 @@ ignore = "git log -1 --pretty=%B | grep dependabot"
 
 # Prevent Netlify from auto-installing Swift
 [build.environment]
-SWIFT_VERSION = "none"
+SWIFT_VERSION = ""
+SKIP_SWIFT_INSTALL = "true"
