--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ build/
 /screens
 test-results/
 playwright-report/
-Sources/ContentScopeScripts/dist/
 test-results
-!Sources/ContentScopeScripts/dist/pages/.gitignore
+
+# Apple Package
+Sources/ContentScopeScripts/dist/
+!Sources/ContentScopeScripts/dist/pages/.gitkeep
 
 # Test output files (generated during tests)
 injected/unit-test/fixtures/page-context/output/
